initial app set up

--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,13 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
+.symbol {
   height: 20rem;
+  opacity: 0;
+}
+
+.animating{
+  animation: App-logo-spin 1 10s linear;
 }
 
 .App-header {
@@ -19,6 +23,15 @@
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  0% { 
+    transform: rotate(0deg);
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% { 
+    transform: rotate(360deg);
+    opacity: 0;
+  }
 }
