--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,19 @@
 .App {
-  text-align: center;
+  color:#747474;
+  padding: 4rem 2rem;
 }
 
 .symbol {
-  height: 20rem;
+  height: 24rem;
   opacity: 0;
+  transform: scale(0);
+  margin: 0 auto;
+  padding-bottom: 2rem;
+  display: block;
 }
 
 .animating{
-  animation: App-logo-spin 1 10s linear;
+  
 }
 
 .App-header {
@@ -16,22 +21,51 @@
 
 .App-title {
   font-size: 1.5em;
+  text-align: center;
+  margin: 0;
+  padding-bottom: 0.25rem;
 }
 
 .App-intro {
-  font-size: large;
+  text-align: center;
+  margin: 0;
 }
 
-@keyframes App-logo-spin {
-  0% { 
-    transform: rotate(0deg);
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% { 
-    transform: rotate(360deg);
-    opacity: 0;
-  }
+
+/* ====== nav ====== */
+
+.nav{
+  display: flex;
+  justify-content: center;
+  padding: 3.5rem 0 3.5rem;
 }
+
+/* ====== /nav ====== */
+
+
+/* ====== divider ====== */
+
+.divider{
+  border-bottom: 1px solid #979797;
+  width: 100%;
+  height: .5em;
+  margin-bottom: .5rem;
+}
+
+.divider::before{
+  border-top: 1px dashed #979797;
+  content: '';
+  display: block;
+  position: relative;
+  top: 0;
+}
+
+.divider::after{
+  border-bottom: 1px dashed #979797;
+  content: '';
+  display: block;
+  position: relative;
+  bottom: -15px;
+}
+
+/* ====== /divider ======= */
