--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@
   border-bottom: 1px solid #979797;
   width: 100%;
   height: .5em;
-  margin-bottom: .5rem;
+  margin-bottom: 2rem;
 }
 
 .divider::before{
@@ -69,3 +69,9 @@
 }
 
 /* ====== /divider ======= */
+
+
+.main.modalVisible{
+  filter: blur(10px);
+  pointer-events: none;
+}
