--- a/src/components/modal/view.css
+++ b/src/components/modal/view.css
@@ -1,17 +1,26 @@
+.modal-background{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
+  z-index: 2;
+  padding: 2rem 0;
+  box-sizing: border-box;
+}
+
 .modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 80%;
-    max-width: 800px;
-    z-index: 10;
-    background-color: #fff;
-    margin: 120px auto;
-    right: 0;
-    border-radius: 14px;
-    box-shadow: 0px 0px 44px rgba(0,0,0,0.4);
-    padding: 1.5rem 1.5rem 2.5rem;
-    box-sizing: border-box;
+  transform: translateY(-10%);
+  width: 80%;
+  max-width: 800px;
+  background-color: #fff;
+  margin: 0 auto;
+  border-radius: 14px;
+  box-shadow: 0px 0px 44px rgba(0,0,0,0.4);
+  padding: 1.5rem 1.5rem 2.5rem;
+  box-sizing: border-box;
+  opacity: 0;
 }
 
 .modal img{
@@ -28,6 +37,7 @@
 
 .modal dl{
   margin: 0;
+  padding-top: 1rem;
 }
 
 .modal dt{
@@ -44,8 +54,8 @@
 }
 
 .modal i{
-  padding: .15rem .75rem;
-  background-color: #eee;
+  padding: .25rem .75rem .35rem;
+  border: #ccc solid 1px;
   border-radius: 1rem;
   margin-right: .5rem;
   font-size: 14px;
