--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -3,7 +3,7 @@
     background-color: #F0F0F0;
     border-radius: .5rem;
     border: none;
-    padding: 1rem 2rem;
+    padding: .75rem 1.5rem;
     margin: 0 .5rem;
     color:#747474;
     font-size: .875rem;
