--- a/src/components/modal/view.css
+++ b/src/components/modal/view.css
@@ -11,14 +11,14 @@
 }
 
 .modal {
-  transform: translateY(-10%);
+  transform: translate3d(0,0,0) translateY(-10%);
   width: 80%;
-  max-width: 800px;
+  max-width: 720px;
   background-color: #fff;
   margin: 0 auto;
   border-radius: 14px;
   box-shadow: 0px 0px 44px rgba(0,0,0,0.4);
-  padding: 1.5rem 1.5rem 2.5rem;
+  padding: 1.5rem 1.5rem;
   box-sizing: border-box;
   opacity: 0;
 }
@@ -32,25 +32,32 @@
 
 .modal button{
   float: right;
-  margin: 0 0 1rem;
+  margin: 0;
+}
+
+.modal .button-icon{
+  margin: 0 0 1rem 1rem;
 }
 
 .modal dl{
   margin: 0;
-  padding-top: 1rem;
+  padding-top: .35rem;
 }
 
 .modal dt{
   font-size: 20px;
+  padding-bottom: .5rem;
 }
 
 .modal dd{
   margin-inline-start: 0px;
-  font-size: 16px;
+  font-size: 14px;
+  line-height: 1.1rem;
 }
 
 .modal .date-published{
-  padding-bottom: 1rem;
+  padding: 1rem 0 1rem;
+  font-style: italic;
 }
 
 .modal i{
@@ -59,4 +66,26 @@
   border-radius: 1rem;
   margin-right: .5rem;
   font-size: 14px;
+  display: inline-block;
+  margin-bottom: .5rem;
+}
+
+.modal .tags{
+  width: 100%;
+  padding-bottom: .75rem;
+}
+
+.modal:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* ======SMALL VIEW======= */
+@media only screen and (max-width: 550px) and (min-width: 0px) {
+  .modal {
+    width: 100%;
+    box-shadow: none;
+    padding: 1rem;
+  }
 }
