--- a/src/components/workLayout/view.css
+++ b/src/components/workLayout/view.css
@@ -6,55 +6,5 @@ ul {
     margin: 0;
     padding: 0;
     flex-wrap: wrap;
-}
-
-ul li{
-    margin: 3px;
-}
-
-li input{
-    filter: grayscale(100%);
-    width: 100%;
-    display: block;
-}
-
-li input:hover{
-    filter: none;
-}
-
-li input:focus{
-    filter: none;
-}
-
-li img{
-    width: 100%;
-}
-
- /* ======SMALL VIEW======= */
-@media only screen and (max-width: 550px) and (min-width: 0px) {
-    ul li{
-        width: calc((100% /1) - 6px);
-    }
-}
-
- /* ======MEDIUM VIEW======= */
- @media only screen and (max-width: 850px) and (min-width: 550px) {
-    ul li{
-        width: calc((100% /2) - 6px);
-    }
-}
-
-/* ======LARGE VIEW======= */
-@media only screen and (max-width: 1200px) and (min-width: 850px) {
-    ul li{
-        width: calc((100% /3) - 6px);
-    }
-}
-
-/* ======X-LARGE VIEW======= */
-@media only screen and (min-width: 1200px) {
-    ul li{
-        width: calc((100% /4) - 6px);
-        max-width: 400px;
-    }
+    justify-content: center;
 }
