--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,6 @@
 .App {
   color:#747474;
-  padding: 4rem 2rem;
-}
-
-.symbol {
-  width: 100%;
-  max-width: 24rem;
-  height: 24rem;
-  opacity: 0;
-  transform: scale(0);
-  margin: 0 auto;
-  padding-bottom: 2rem;
-  display: block;
+  height: 100%;
 }
 
 .App-title {
@@ -27,18 +16,34 @@
 }
 
 .main{
-  transition: all .2s ease;
-  transform: translate3d(0,0,0)
+  transition: opacity 1.5s ease;
+  transform: translate3d(0,0,0);
+  padding: 2rem 2rem;
+  position: relative;
+  z-index: 1;
+  opacity: 1;
+  min-height: 100%;
 }
 
 .main.modalVisible{
   pointer-events: none;
+  transition: opacity .3s ease;
   opacity: 0;
+  height: 0;
+  overflow: hidden;
+  padding: 0;
 }
 
-/* header{
-  display: none;
-} */
+
+.work-statement{
+  margin: 0 auto 2rem;
+  font-style: italic;
+  text-align: center;
+}
+
+.work-statement span{
+  font-style: normal;
+}
 
 button:focus, img:focus, button:active, img:active{
   box-shadow: 0 0 5px 2px rgba(219, 28, 198, .5);
@@ -120,3 +125,4 @@ a:focus, a:active{
     height: 21rem;
   }
 }
+
