--- a/src/components/WorkItem/WorkItem.css
+++ b/src/components/WorkItem/WorkItem.css
@@ -15,10 +15,11 @@ li button{
 li img{
   filter: grayscale(100%);
   width: 100%;
-  display: block;
+  opacity: 0;
+  transform: translate3d(0,0,0)
 }
 
-li img:hover{
+li button:hover img{
   filter: none;
 }
 
@@ -26,9 +27,35 @@ li button:focus img{
   filter: none;
 }
 
-li img{
-  width: 100%;
+li button.hasAnimation::after{
+  content: 'MOTION';
+  display: flex;
+  background-color: rgba(255,255,255,0.7);
+  height: 30px;
+  padding: 0 1rem;
+  width: 40px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 0;
+  left: 0;
+  margin: 0 auto;
+  border-radius: 2rem;
+  box-shadow: 0px 0px 20px rgba(0,0,0,0.7);
+  justify-content: center;
+  align-items: center;
+  color: #777;
+  font-style: italic;
+  font-weight: 900;
+  transition: opacity .3s ease;
+  pointer-events: none;
+  opacity: 1;
 }
+
+li button.hasAnimation.isFocused::after{
+  opacity: 0;
+}
+
 
 .loading-work-state{
   background-color: #F0F0F0;
@@ -46,7 +73,7 @@ li img{
 
 .loading-work-state .big-circle{
   display: block;
-  background: #D9D9D9;
+  border: 3px solid #D9D9D9;
   width: 25%;
   border-radius: 50%;
   margin: 0 auto;
@@ -62,14 +89,41 @@ li img{
 .loading-work-state .small-circle{
   display: block;
   position: absolute;
-  width: 30%;
-  padding-bottom: 30%;
+  width: 35%;
+  padding-bottom: 35%;
   border-radius: 50%;
-  background: #F0F0F0;
+  background: #D9D9D9;
   margin: 0 auto;
-  top: 60%;
+  top: 50%;
   left: 0;
   right: 0;
+  transform: translateY(-50%);
+}
+
+.loading-work-state .electron-circle{
+  display: block;
+  position: absolute;
+  width: 20%;
+  padding-bottom: 20%;
+  border-radius: 50%;
+  background: #D9D9D9;
+  margin: 0 auto;
+  animation: electronMotion 5s infinite linear;
+  transform-origin: 230% 230%;
+  transform: translate3d(0,0,0);
+  left: 5%;
+  top: 5%;
+  
+
+}
+
+@keyframes electronMotion {
+  from {
+    transform: translate3d(0,0,0) rotate(0deg);
+  }
+  to {
+    transform: translate3d(0,0,0) rotate(360deg);
+  }
 }
 
 /* ======SMALL VIEW======= */
