--- a/src/components/modal/view.css
+++ b/src/components/modal/view.css
@@ -1,13 +1,13 @@
 .modal-background{
-  position: fixed;
+  position: absolute;
   top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
-  overflow: scroll;
-  z-index: 2;
+  z-index: 10;
   padding: 2rem 0;
   box-sizing: border-box;
+  transform: translate3d(0,0,0);
+  will-change: transform;
 }
 
 .modal {
@@ -82,10 +82,27 @@
 }
 
 /* ======SMALL VIEW======= */
-@media only screen and (max-width: 550px) and (min-width: 0px) {
+@media only screen and (max-width: 1024px) and (min-width: 0px) {
+  .modal-background{
+    background-color: #fff;
+    padding: 0;
+  }
   .modal {
     width: 100%;
     box-shadow: none;
     padding: 1rem;
+  }
+}
+
+/* ======SMALL VIEW======= */
+@media (orientation: landscape) {
+  .modal-background{
+    animation: fixWebkitOverflowScroll 1s;
+  }
+
+  @keyframes fixWebkitOverflowScroll
+  {
+    0% {padding-bottom: 1px;}
+    100% {padding-bottom: 0px;}
   }
 }
