--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,12 @@
+html, body {
+  min-height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
   font-size: 16px;
   font-weight: 300;
+  -webkit-overflow-scrolling: touch;
 }
