--- a/client/src/components/processWork/processWork.css
+++ b/client/src/components/processWork/processWork.css
@@ -22,7 +22,7 @@
   text-align: center;
   width: 100%;
   background-color: rgba(219, 28, 198, 0.7);
-  padding: 1rem 0;
+  padding: .75rem 0;
   color: #fff;
   font-weight: 500;
   font-size: 1rem;
