ios bug fix on overflow-x on App removed default button style with line-height put overflow x hidden on body

--- a/client/src/components/processWork/processWork.css
+++ b/client/src/components/processWork/processWork.css
@@ -10,6 +10,13 @@
   position: relative;
 }
 
+.process-work-image-holder button{
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  line-height: 0;
+}
+
 .process-work-caption{ 
   opacity: 0;
   pointer-events: none;
