--- a/client/src/components/workItem/workItem.css
+++ b/client/src/components/workItem/workItem.css
@@ -25,7 +25,7 @@ li button{
   text-align: center;
   width: 100%;
   background-color: rgba(219, 28, 198, 0.7);
-  padding: .75rem 0;
+  padding: 1.25rem 0;
   color: #fff;
   font-weight: 500;
   font-size: 1rem;
