--- a/client/src/components/alchemySymbol/view.css
+++ b/client/src/components/alchemySymbol/view.css
@@ -3,14 +3,15 @@
   height: 24rem;
   padding-bottom: 2rem;
   margin: 0 auto;
+  position: relative;
 }
 
 .symbol {
   width: 100%;
   height: 100%;
   opacity: 0;
-  will-change: transform;
   display: block;
+  position: absolute;
 }
 
 .symbol svg{
