--- a/client/src/components/processWork/processWork.css
+++ b/client/src/components/processWork/processWork.css
@@ -8,7 +8,10 @@
 .process-work-image-holder{
   margin: 0;
   position: relative;
-  min-height: 100px;
+  height: 0;
+  width: 100%;
+  padding-bottom: 57%;
+
 }
 
 .process-work-image-holder button{
@@ -16,6 +19,7 @@
   padding: 0;
   cursor: pointer;
   line-height: 0;
+  position: relative;
 }
 
 .process-work-caption{ 
@@ -30,7 +34,7 @@
   text-align: center;
   width: 100%;
   background-color: rgba(219, 28, 198, 0.7);
-  padding: .75rem 0;
+  padding: 1.25rem 0;
   color: #fff;
   font-weight: 500;
   font-size: 1rem;
