--- a/client/src/components/withBasicLoader/withBasicLoader.css
+++ b/client/src/components/withBasicLoader/withBasicLoader.css
@@ -1,3 +1,8 @@
+.item{
+  width: 100%;
+  height: 100%;
+}
+
 .loading-work-state{
   background-color: #F0F0F0;
   padding: 2.5rem .75rem;
@@ -12,13 +17,27 @@
   
 }
 
+.loading-work-state .atom{
+  width: 25%;
+  height: 25%;
+  max-width: 80px;
+  max-height: 80px;
+  position: absolute;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
 .loading-work-state .big-circle{
   display: block;
   border: 3px solid #D9D9D9;
-  width: 25%;
+  width: 100%;
+  max-width: 100px;
   border-radius: 50%;
   margin: 0 auto;
-  padding: 0 0 25% 0;
+  padding: 0 0 100% 0;
   top: 50%;
   position: absolute;
   left: 0;
