--- a/client/src/components/workItem/workItem.css
+++ b/client/src/components/workItem/workItem.css
@@ -1,7 +1,5 @@
 li{
   margin: 3px;
-  position: relative;
-  min-height: 180px;
   transition: all .3s ease;
 }
 
@@ -9,8 +7,17 @@ li button{
   border: none;
   padding: 0;
   cursor: pointer;
-  position: relative;
   line-height: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.work-item-image-holder{
+  position: relative;
+  margin: 0;
+  width: 100%;
+  height: 0;
+  padding-bottom: 75%;
 }
 
 .workitem-caption{ 
@@ -40,7 +47,7 @@ li img{
   filter: grayscale(100%);
   width: 100%;
   opacity: 0;
-  transform: translate3d(0,0,0)
+  transform: translate3d(0,0,0);
 }
 
 li button:hover img{
