--- a/client/src/components/icon/view.css
+++ b/client/src/components/icon/view.css
@@ -1,16 +1,18 @@
-.icon-container{
-  display: inline-block;
+.icon-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.assistive-text{
-  position: absolute!important;
-  margin: -1px!important;
-  border: 0!important;
-  padding: 0!important;
-  width: 1px!important;
-  height: 1px!important;
-  overflow: hidden!important;
-  clip: rect(0 0 0 0)!important;
-  text-transform: none!important;
-  white-space: nowrap!important;
+.assistive-text {
+  position: absolute !important;
+  margin: -1px !important;
+  border: 0 !important;
+  padding: 0 !important;
+  width: 1px !important;
+  height: 1px !important;
+  overflow: hidden !important;
+  clip: rect(0 0 0 0) !important;
+  text-transform: none !important;
+  white-space: nowrap !important;
 }
